--- a/package.json
+++ b/package.json
@@ -7,11 +7,49 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx typesync"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@tanstack/react-query": "^5.56.2",
+    "@tradle/react-native-http": "^2.0.0",
+    "assert": "^1.1.1",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^4.9.1",
+    "console-browserify": "^1.1.0",
+    "constants-browserify": "^1.0.0",
+    "diamnet-sdk": "^1.0.2",
+    "dns.js": "^1.0.1",
+    "domain-browser": "^1.1.1",
+    "events": "^1.0.0",
+    "https-browserify": "^0.0.1",
+    "path-browserify": "^0.0.0",
+    "process": "^0.11.0",
+    "punycode": "^1.2.4",
+    "querystring-es3": "^0.2.1",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-native": "0.75.3",
+    "react-native-level-fs": "^3.0.0",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^15.7.1",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0",
+    "readable-stream": "^1.0.33",
+    "stream-browserify": "^1.0.0",
+    "timers-browserify": "^1.0.1",
+    "tty-browserify": "^0.0.0",
+    "url": "^0.10.3",
+    "util": "^0.10.4",
+    "vm-browserify": "^0.0.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,17 +59,75 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@types/assert": "~1.5.10",
+    "@types/babel__core": "~7.20.5",
+    "@types/babel__preset-env": "~7.9.7",
+    "@types/eslint": "~9.6.1",
+    "@types/events": "~3.0.3",
+    "@types/path-browserify": "~1.0.3",
+    "@types/punycode": "~2.1.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "~6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/readable-stream": "~4.0.15",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@3.6.4",
+  "react-native": {
+    "zlib": "browserify-zlib",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "dns": "dns.js",
+    "domain": "domain-browser",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "fs": "react-native-level-fs",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "tls": false
+  },
+  "browser": {
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_writable": "readable-stream/writable",
+    "console": "console-browserify",
+    "constants": "constants-browserify",
+    "crypto": "react-native-crypto",
+    "dgram": "react-native-udp",
+    "dns": "dns.js",
+    "domain": "domain-browser",
+    "fs": "react-native-level-fs",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "net": "react-native-tcp",
+    "os": "react-native-os",
+    "path": "path-browserify",
+    "querystring": "querystring-es3",
+    "stream": "stream-browserify",
+    "timers": "timers-browserify",
+    "tls": false,
+    "tty": "tty-browserify",
+    "vm": "vm-browserify",
+    "zlib": "browserify-zlib"
+  }
 }
