--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "npx typesync"
   },
   "dependencies": {
+    "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
@@ -28,6 +29,7 @@
     "domain-browser": "^1.1.1",
     "events": "^1.0.0",
     "https-browserify": "^0.0.1",
+    "lottie-react-native": "^7.0.0",
     "path-browserify": "^0.0.0",
     "process": "^0.11.0",
     "punycode": "^1.2.4",
@@ -35,6 +37,8 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-level-fs": "^3.0.0",
+    "react-native-mmkv": "^2.12.2",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
@@ -42,6 +46,7 @@
     "react-native-svg": "^15.7.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.2",
     "readable-stream": "^1.0.33",
     "stream-browserify": "^1.0.0",
     "timers-browserify": "^1.0.1",
