--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-clipboard/clipboard": "^1.14.2",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^21.0.0",
+    "@react-native-firebase/storage": "^21.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -30,12 +32,15 @@
     "events": "^1.0.0",
     "https-browserify": "^0.0.1",
     "lottie-react-native": "^7.0.0",
+    "nanoid": "^5.0.7",
     "path-browserify": "^0.0.0",
     "process": "^0.11.0",
     "punycode": "^1.2.4",
     "querystring-es3": "^0.2.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-level-fs": "^3.0.0",
     "react-native-mmkv": "^2.12.2",
     "react-native-pell-rich-editor": "^1.9.0",
@@ -53,6 +58,7 @@
     "tty-browserify": "^0.0.0",
     "url": "^0.10.3",
     "util": "^0.10.4",
+    "uuid": "^10.0.0",
     "vm-browserify": "^0.0.4",
     "zustand": "^5.0.0-rc.2"
   },
@@ -72,9 +78,11 @@
     "@types/path-browserify": "~1.0.3",
     "@types/punycode": "~2.1.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-get-random-values": "~1.8.2",
     "@types/react-native-vector-icons": "~6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@types/readable-stream": "~4.0.15",
+    "@types/uuid": "~10.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
